[package]
name = "hugoenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.11", features = ["derive"] }
flate2 = "1.0.24"
reqwest = { version = "0.11.12", features = ["blocking"] }
shellexpand = "2.1.2"
tar = "0.4.38"
tempfile = "3.3.0"
