[package]
name = "hugoenv"
version = "0.0.3"
authors = ["F <f@erbridge.co.uk>"]
edition = "2021"
description = "A version manager for Hugo"
readme = "README.md"
homepage = "https://github.com/erbridge/hugoenv"
repository = "https://github.com/erbridge/hugoenv"
license-file = "LICENCE"
keywords = ["cli", "hugo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.11", features = ["derive"] }
flate2 = "1.0.24"
reqwest = { version = "0.11.12", features = ["blocking"] }
semver = "1.0.14"
shellexpand = "2.1.2"
tar = "0.4.38"
tempfile = "3.3.0"
